--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="app/controllers/main.js"></script>
     <script src="app/services/cache.js"></script>
     <script src="app/services/server.js"></script>
+    <script src="lib/materialize/js/materialize.min.js"></script>
   </head>
   <body ng-app="codefam">
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
