--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="app/services/cache.js"></script>
     <script src="app/services/server.js"></script>
     <script src="lib/materialize/js/materialize.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
   <body ng-app="codefam">
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
