--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -14,11 +14,6 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
-
-
-    <script src="lib/openfb/openfb.js"></script>
-    <script src="lib/openfb/ngOpenFb.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
@@ -27,11 +22,13 @@
     <!-- your app's js -->
     <script src="app/app.js"></script>
     <script src="app/controllers/users.js"></script>
-    <script src="app/controllers/offers.js"></script>
+    <script src="app/controllers/main.js"></script>
     <script src="app/services/cache.js"></script>
     <script src="app/services/server.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="lib/materialize/js/materialize.min.js"></script>
   </head>
-  <body ng-app="brainstorm" class="platform-android platform-cordova platform-webview">
+  <body ng-app="codefam" class="platform-android platform-cordova platform-webview">
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
   </body>
 </html>
