--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,6 @@
     <link href="lib/materialize/css/materialize.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
-
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -27,7 +25,7 @@
     <script src="app/services/server.js"></script>
     <script src="lib/materialize/js/materialize.min.js"></script>
   </head>
-  <body ng-app="codefam">
+  <body class="login" ng-app="codefam">
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
   </body>
 </html>
