tabs for filters

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -7,7 +7,7 @@
 
     <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="lib/materialize/css/materialize.min.css" rel="stylesheet">
+    <link href="lib/materialize/css/materialize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 
